# eugene

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  endpoints.rs  error.rs  lib.rs  main.rs  model.rs  util.rs
src/endpoints/: cross.rs  lookup.rs  xrefs.rs
